--- a/templates/ras.jinja
+++ b/templates/ras.jinja
@@ -37,7 +37,7 @@ addrmap ras_nodes {
         RES0                                        RES0_11[11:11];
         RES0                                        RES0_10[10:10];
         RES0                                        RES0_9[9:9];
-        field {sw = rw; hw = r;}                    CFI[8:8] = 1'b0;
+        field {sw = rw; hw = r;}                    CFI[8:8] = 1'b1;
         RES0                                        RES0_7[7:7];
         RES0                                        RES0_6[6:6];
         RES0                                        RES0_5[5:5];
@@ -64,8 +64,8 @@ addrmap ras_nodes {
         desc = "Error record address register 1";
         field {sw = r; hard_wired = true; hw = na;} NS[31:31] = 1'b0;
         field {sw = r; hard_wired = true; hw = na;} SI[30:30] = 1'b1;
-        field {sw = r; hard_wired = true; hw = na;} AI[29:29] = 1'b1;
-        field {sw = r; hard_wired = true; hw = na;} VA[28:28] = 1'b0;
+        field {sw = rw;}                            AI[29:29] = 1'b0;
+        field {sw = rw;}                            VA[28:28] = 1'b0;
         RES0                                        RES0_27_24[27:24];
         field {sw = r; hw = w;}                     PADDR_55_32[23:0] = 23'b0;
     };
@@ -80,7 +80,7 @@ addrmap ras_nodes {
         field {sw = rw; onwrite = woclr;}           MV[26:26] = 1'b0;
         field {sw = rw; onwrite = woclr;}           CE[25:24] = 2'b10;
         field {sw = r; hard_wired = true; hw = na;} DE[23:23] = 1'b0;
-        field {sw = r;}                             PN[22:22] = 1'b0;
+        field {sw = rw; onwrite = woclr;}           PN[22:22] = 1'b0;
         field {sw = rw; onwrite = woclr;}           UET[21:20] = 2'b11;
         field {sw = r; hard_wired = true; hw = na;} CI[19:19] = 1'b0;
         RES0                                        RES0_18_16[18:16];
@@ -98,8 +98,9 @@ addrmap ras_nodes {
     };
     reg ERR_MISC0_1 {
         desc = "Error record miscellaneous register 0_1";
+        field {sw = rw; onwrite = woset;}           CEC_WD[31:16] = 16'hffff;
         field {sw = rw; onwrite = woclr;}           OF[15:15] = 1'b0;
-        field {sw = rw;}                            CEC[14:0] = 15'b0;
+        field {sw = rw; onwrite = woset;}           CEC[14:0] = 15'b0;
     };
 
     reg ERR_MISC1_0 {
@@ -118,17 +119,17 @@ addrmap ras_nodes {
     };
     reg ERR_MISC2_1 {
         desc = "Error record miscellaneous register 2_1";
-        RES0                RES0_31_1[31:1];
+        RES0                        RES0_31_1[31:1];
         field {sw = rw; hw = r;}    FIM[0:0] = 1'b0;
     };
 
     reg ERR_MISC3_0 {
         desc = "Error record miscellaneous register 3_0";
-        field {sw = rw; hw = r;}    ITT[31:0] = 32'b0;
+        RES0                        RES0_31_0[31:0];
     };
     reg ERR_MISC3_1 {
         desc = "Error record miscellaneous register 3_1";
-        field {sw = r; hw = w;}     INFO[31:0] = 32'b0;
+        field {sw = r; hw = w;}     POIS_INFO[31:0] = 32'b0;
     };
 
     reg ERR_GSR {
